--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  min-height: 200vh;
 }
 
-.App-link {
-  color: #61dafb;
+.landing-section {
+  border: white solid 1px;
+  height: 600px;
+  margin: 1rem;
+  padding: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.resource-section {
+  border: blue solid 1px;
+  min-height: 600px;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.search-section {
+  margin: 1rem;
+}
+
+.search-section h3 {
+  text-align: left;
+}
+
+.form {
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.form h3 {
+  text-align: left;
+}
+
+.checkbox-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: no-wrap;
+      flex-wrap: no-wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 1.4rem;
+  margin-bottom: 1rem;
+}
+
+.checkbox {
+  margin-right: 0.3rem;
+}
+
+.blog-cards {
+  border: 2px black solid;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1rem;
+}
+
+.ui.card,
+.ui.card:last-child,
+.ui.card:first-child {
+  margin: 1rem 0;
+  color: #191927;
+}
+
+.ui.card:hover,
+.ui.card:last-child:hover,
+.ui.card:first-child:hover {
+  color: #191927;
+}
+
+.ui.card b,
+.ui.card:last-child b,
+.ui.card:first-child b {
+  color: #3e3e47;
+}
+
+.ThemeCards {
+  padding: 2rem;
+  /* border: 2px black solid; */
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 2rem;
+}
+
+@media (min-width: 1559px) {
+  .ThemeCards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    grid-gap: 1rem; */
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
+
+.themeCard {
+  border: 2px gray solid;
+  background-color: #353f47;
+  min-width: 316px;
+}
+
+/* Component ThemeCards has themeCard elements */
+@media (max-width: 1359px) {
+  .ThemeCards .ui.card:last-child {
+    display: none;
+  }
+}
+
+@media (max-width: 1026px) {
+  .ThemeCards .ui.card:nth-child(3) {
+    display: none;
+  }
+}
+/*# sourceMappingURL=App.css.map */
