--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,25 @@
 .App {
-  text-align: center;
-  background-color: #282c34;
-  color: white;
-  min-height: 200vh;
+  min-height: 100vh;
 }
 
 .landing-section {
-  border: white solid 1px;
   height: 600px;
   margin: 1rem;
   padding: 1rem;
 }
 
-.resource-section {
-  border: blue solid 1px;
-  min-height: 600px;
-  margin: 1rem;
-  padding: 1rem;
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 100%;
 }
 
 .search-section {
@@ -27,8 +30,11 @@
   text-align: left;
 }
 
+.resource-section {
+  min-height: 600px;
+}
+
 .form {
-  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
