--- a/src/App.scss
+++ b/src/App.scss
@@ -1,23 +1,27 @@
 .App {
-  text-align: center;
-  background-color: #282c34;
-  color: white;
-  min-height: 200vh;
+  // text-align: center;
+  // background-color: #282c34;
+  // color: white;
+  min-height: 100vh;
 }
 
+// Home Page
+// The Intro Section of the Page
 .landing-section {
-  border: white solid 1px;
+  // border: white solid 1px;
   height: 600px;
   margin: 1rem;
   padding: 1rem;
 }
-.resource-section {
-  border: blue solid 1px;
-  min-height: 600px;
-  margin: 1rem;
-  padding: 1rem;
+// Modal in landing section
+.flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
 }
 
+// The section with the checkboxes
 .search-section {
   //   border: 1px solid blue;
   margin: 1rem;
@@ -27,8 +31,16 @@
   }
 }
 
+// The resource section with cards
+.resource-section {
+  // border: blue solid 1px;
+  min-height: 600px;
+  // margin: 1rem;
+  // padding: 1rem;
+}
+
 .form {
-  color: white;
+  // color: white;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
