--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,25 @@
+* {
+  margin: 0;
+  padding: 0;
+  /* max-width: 2000px; */
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+html,
+body {
+  // background-color: #080a21;
+  color: #080f0b;
+  font-size: 1rem;
+  font-family: "Source Sans Pro", sans-serif;
+  box-sizing: border-box;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .App {
   // text-align: center;
   // background-color: #282c34;
@@ -6,14 +28,78 @@
 }
 
 // Home Page
-// The Intro Section of the Page
+// ------------------------------------
+
+// Intro Landing Section of the Home Page
+
 .landing-section {
-  // border: white solid 1px;
-  height: 600px;
-  margin: 1rem;
-  padding: 1rem;
+  //  height: 600px;
+  background-color: #dde9e7;
+  background-image: url("./images/background3.png"), url("./images/clouds.png");
+  background-repeat: no-repeat, no-repeat;
+  background-position: right bottom 40px, left top;
+  background-size: 500px 500px, cover;
+
+  position: relative;
+  min-height: 580px;
+  height: 100vh;
+  max-height: 650px;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
+  // padding-bottom: 1rem;
+  padding-top: 2.2rem;
 }
+
+.border {
+  // display: absolute;
+  background-color: none;
+  border-radius: 6px;
+  border: #0d1c0b solid 2px;
+  height: 88%;
+  width: 90%;
+  margin: auto;
+  .nav-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    a {
+      color: #080f0b;
+      padding: 2rem;
+      padding-top: 1.4rem;
+    }
+  }
+}
+// Intro Block
+.intro-block {
+  background: rgba(245, 245, 245, 0.39);
+  border-radius: 6px;
+  width: 40%;
+  margin-left: 10%;
+  padding: 2rem;
+  h2 {
+    margin: 0;
+    margin-bottom: 0.2rem;
+    font-size: 1.3rem;
+    font-style: italic;
+  }
+  .dropdown-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
 // Modal in landing section
+
+.modal-form-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+// Little arrow that points to the right
 .flex {
   display: flex;
   flex-direction: row;
@@ -21,34 +107,18 @@
   width: 100%;
 }
 
-// The section with the checkboxes
+// The Search section with the checkboxes
 .search-section {
-  //   border: 1px solid blue;
   margin: 1rem;
-
   h3 {
     text-align: left;
   }
 }
-
-// The resource section with cards
-.resource-section {
-  // border: blue solid 1px;
-  min-height: 600px;
-  // margin: 1rem;
-  // padding: 1rem;
-}
-
+// The form that contains all of the checkboxes
 .form {
-  // color: white;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  //   padding-top: 1.5rem;
-  //   border: 1px solid white;
-  h3 {
-    text-align: left;
-  }
 }
 .checkbox-item {
   display: flex;
@@ -60,6 +130,13 @@
 }
 .checkbox {
   margin-right: 0.3rem;
+}
+
+// The Resource Section with cards
+.resource-section {
+  min-height: 600px;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 .blog-cards {
@@ -87,9 +164,14 @@ p.blurb {
   }
 }
 
+// -------------------------------------------------------
+
+// -------------------------------------------------------
+
+// -------------------------------------------------------
+//Theme Pages -- That have all of the cards that contain the tags for that theme
 .ThemeCards {
   padding: 2rem;
-  /* border: 2px black solid; */
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -123,3 +205,10 @@ p.blurb {
     display: none;
   }
 }
+
+// -------------------------------------------------------
+
+// -------------------------------------------------------
+
+// -------------------------------------------------------
+//Blog Pages -- Contain the page with blog posts
