Adds responsive css for the cards

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body {
           box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
+  background-color: #dde9e7;
 }
 
 .App {
@@ -37,6 +38,19 @@ body {
   height: 100vh;
   max-height: 650px;
   padding-top: 2.2rem;
+}
+
+@media (max-width: 500px) {
+  .landing-section {
+    background-position: right bottom, left top;
+  }
+}
+
+@media (min-width: 1000px) {
+  .landing-section {
+    background-size: 750px 500px, cover;
+    background-position: right bottom 30px, left top;
+  }
 }
 
 .border {
@@ -95,6 +109,27 @@ body {
           justify-content: center;
 }
 
+@media (min-width: 480px) and (max-width: 900px) {
+  .intro-block {
+    width: 350px;
+  }
+}
+
+@media (max-width: 760px) {
+  .intro-block {
+    background: rgba(245, 245, 245, 0.698);
+  }
+}
+
+@media (max-width: 480px) {
+  .intro-block {
+    width: 90%;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    background: rgba(245, 245, 245, 0.781);
+  }
+}
+
 .modal-form-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -130,6 +165,15 @@ body {
 
 .search-section h3 {
   text-align: left;
+}
+
+.filter-underline {
+  height: 1px;
+  display: block;
+  margin: 0;
+  padding: 0;
+  background-color: #323d44;
+  max-width: 400px;
 }
 
 .form {
@@ -169,6 +213,26 @@ body {
   min-height: 600px;
   padding-right: 1rem;
   padding-left: 1rem;
+}
+
+.resource-section h3 {
+  margin-top: 1.5rem;
+}
+
+@media (max-width: 380px) {
+  div.ThemeCards {
+    padding: 0;
+  }
+  a.ui.card.themeCard,
+  .themeCard,
+  .ui.card,
+  .ui.cards,
+  .ui.cards > .card {
+    width: 80%;
+    min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .blog-cards {
