Adds responsive styling to blog info page and resource section and creates a footer section

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
           box-sizing: inherit;
 }
 
+.App,
 html,
 body {
   background-color: #f6f8f8;
@@ -207,6 +208,13 @@ h3 {
   padding-left: 1rem;
 }
 
+@media (min-width: 800px) {
+  .search-section {
+    padding-left: 2rem;
+    padding-bottom: 0;
+  }
+}
+
 .filter-underline {
   height: 2px;
   display: block;
@@ -270,6 +278,13 @@ h3 {
   margin: 0;
 }
 
+@media (min-width: 800px) {
+  .resource-section h2 {
+    padding-left: 3rem;
+    padding-bottom: 0;
+  }
+}
+
 .link-wrapper {
   width: 100%;
   display: inline-block;
@@ -304,6 +319,13 @@ a.see-more-link {
     min-width: 200px;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media (min-width: 700px) {
+  div.ThemeCards {
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
 
@@ -423,6 +445,24 @@ p.blurb {
 .blog-section h1,
 .blog-section h4 {
   text-align: center;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.blog-info-blog-body {
+  text-align: left;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 500px) {
+  .blog-info-blog-body {
+    width: 100%;
+    padding: 2rem;
+    padding-top: 1rem;
+    text-align: justify;
+  }
 }
 
 .blog-info-more-link-wrapper {
@@ -438,6 +478,14 @@ p.blurb {
           justify-content: end;
   padding: 2rem;
   padding-right: 4rem;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+@media (max-width: 340px) {
+  .blog-info-more-link-wrapper a {
+    font-size: 0.9rem;
+  }
 }
 
 .theme-page .theme-page-body {
@@ -448,5 +496,30 @@ p.blurb {
 .theme-page .theme-page-body h1 {
   text-align: center;
   padding: 1.5rem;
+}
+
+.footer {
+  background: #283043;
+  color: whitesmoke;
+  height: 20rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 2rem;
+}
+
+.footer a {
+  text-decoration: underline;
+  color: rgba(245, 245, 245, 0.89);
 }
 /*# sourceMappingURL=App.css.map */
