--- a/src/App.scss
+++ b/src/App.scss
@@ -420,8 +420,17 @@ p.blurb {
   h1,
   h4 {
     text-align: center;
-    margin-right: 1rem;
-    margin-left: 1rem;
+    margin-right: 3rem;
+    margin-left: 3rem;
+  }
+}
+@media (max-width: 500px) {
+  .blog-section {
+    h1,
+    h4 {
+      margin-right: 1rem;
+      margin-left: 1rem;
+    }
   }
 }
 
