Updates README.md with full summary

--- a/src/App.scss
+++ b/src/App.scss
@@ -276,6 +276,7 @@ h3 {
   min-height: 600px;
   // padding-right: 1rem;
   // padding-left: 1rem;
+  padding-top: 4rem;
   h2 {
     padding-top: 1.5rem;
     padding-left: 2rem;
